--- a/.gitignore
+++ b/.gitignore
@@ -3,9 +3,12 @@
 /public/storage
 /storage/*.key
 /vendor
-.env
+
 .phpunit.result.cache
 Homestead.json
 Homestead.yaml
 npm-debug.log
 yarn-error.log
+
+# temporary files
+/public/js/app.js
