--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-APP_NAME=Laravel
+APP_NAME=Plan-Estudios
 APP_ENV=local
 APP_KEY=base64:lNjQHkMeru25oJEgytswPo1u7QoO9Un1KiNoQ+YKDpk=
 APP_DEBUG=true
