--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
         "vue-template-compiler": "^2.6.9"
     },
     "dependencies": {
+        "es6-promise": "^4.2.6",
         "vue-router": "^3.0.2",
-        "vuetify": "^1.5.6"
+        "vuetify": "^1.5.6",
+        "vuex": "^3.1.0"
     }
 }
