--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "es6-promise": "^4.2.6",
         "vue-router": "^3.0.2",
         "vuetify": "^1.5.6",
+        "vuetify-toast": "^0.1.0",
         "vuex": "^3.1.0"
     }
 }
